--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,7 @@
         "psr-4": {
             "SocialiteProviders\\Facebook\\": ""
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
