--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "socialiteproviders/facebook",
     "description": "Facebook (facebook.com) OAuth2 Provider for Laravel Socialite",
     "license": "MIT",
-    "version": "1.0.0",
     "authors": [{
         "name": "Oleksandr Prypkhan (Alex Wells)",
         "email": "autaut03@googlemail.com"
@@ -16,6 +15,5 @@
             "SocialiteProviders\\Facebook\\": ""
         }
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true
+    "minimum-stability": "dev"
 }
